src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> instructions
Rule 2     instructions -> instructions instruction
Rule 3     instructions -> instruction
Rule 4     instructions -> instructions instruction WORD
Rule 5     instructions -> instructions instruction WORD instruction
Rule 6     instructions -> FUNCTION_DEFINITION
Rule 7     instruction -> instructions WORD instructions
Rule 8     FUNCTION_DEFINITION -> CONDICIONAL
Rule 9     instruction -> NUMBER
Rule 10    instruction -> operator
Rule 11    instruction -> CARACTER
Rule 12    operator -> PLUS
Rule 13    operator -> MINUS
Rule 14    operator -> TIMES
Rule 15    operator -> DIVIDE
Rule 16    operator -> SUP
Rule 17    operator -> INF
Rule 18    operator -> EQUALS
Rule 19    instruction -> PRINT
Rule 20    PRINT -> DOT
Rule 21    PRINT -> DOT NUMBER
Rule 22    PRINT -> DOT QUOTE words QUOTE
Rule 23    PRINT -> EMIT
Rule 24    FUNCTION_DEFINITION -> COLON WORD LPAREN FUNCTION_PARAMS RPAREN FUNCTION_BODY SEMICOLON
Rule 25    FUNCTION_PARAMS -> PARAMS FUNCTION_PARAMS
Rule 26    FUNCTION_PARAMS -> PARAMS MIDFUNC WORD
Rule 27    PARAMS -> ID
Rule 28    PARAMS -> MIDFUNC
Rule 29    PARAMS -> WORD
Rule 30    FUNCTION_BODY -> instructions
Rule 31    FUNCTION_BODY -> instruction
Rule 32    FUNCTION_DEFINITION -> COLON WORD PRINTFUNC SEMICOLON
Rule 33    PRINTFUNC -> DOT QUOTE words QUOTE
Rule 34    PRINTFUNC -> DOT QUOTE words QUOTE CARACTER
Rule 35    PRINTFUNC -> QUOTE words QUOTE
Rule 36    words -> words WORD
Rule 37    words -> words WORD sinais
Rule 38    words -> WORD
Rule 39    instructions -> FUNCCALL
Rule 40    FUNCCALL -> WORD
Rule 41    sinais -> EXCLAMATION
Rule 42    sinais -> INTERROGATION
Rule 43    FUNCTION_DEFINITION -> COLON funcword SEMICOLON
Rule 44    funcword -> WORD WORD
Rule 45    CARACTER -> CR
Rule 46    CARACTER -> KEY
Rule 47    CONDICIONAL -> COLON WORD operator IF part ELSE part THEN SEMICOLON
Rule 48    part -> DOT QUOTE words QUOTE
Rule 49    part -> QUOTE words QUOTE

Terminals, with rules where they appear

COLON                : 24 32 43 47
CR                   : 45
DIVIDE               : 15
DOT                  : 20 21 22 33 34 48
ELSE                 : 47
EMIT                 : 23
EQUALS               : 18
EXCLAMATION          : 41
ID                   : 27
IF                   : 47
INF                  : 17
INTERROGATION        : 42
KEY                  : 46
LPAREN               : 24
MIDFUNC              : 26 28
MINUS                : 13
NUMBER               : 9 21
PLUS                 : 12
QUOTE                : 22 22 33 33 34 34 35 35 48 48 49 49
RPAREN               : 24
SEMICOLON            : 24 32 43 47
SUP                  : 16
THEN                 : 47
TIMES                : 14
WORD                 : 4 5 7 24 26 29 32 36 37 38 40 44 44 47
error                : 

Nonterminals, with rules where they appear

CARACTER             : 11 34
CONDICIONAL          : 8
FUNCCALL             : 39
FUNCTION_BODY        : 24
FUNCTION_DEFINITION  : 6
FUNCTION_PARAMS      : 24 25
PARAMS               : 25 26
PRINT                : 19
PRINTFUNC            : 32
funcword             : 43
instruction          : 2 3 4 5 5 31
instructions         : 1 2 4 5 7 7 30
operator             : 10 47
part                 : 47 47
sinais               : 37
statement            : 0
words                : 22 33 34 35 36 37 48 49

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . instructions
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instructions -> . instructions instruction WORD
    (5) instructions -> . instructions instruction WORD instruction
    (6) instructions -> . FUNCTION_DEFINITION
    (39) instructions -> . FUNCCALL
    (7) instruction -> . instructions WORD instructions
    (9) instruction -> . NUMBER
    (10) instruction -> . operator
    (11) instruction -> . CARACTER
    (19) instruction -> . PRINT
    (8) FUNCTION_DEFINITION -> . CONDICIONAL
    (24) FUNCTION_DEFINITION -> . COLON WORD LPAREN FUNCTION_PARAMS RPAREN FUNCTION_BODY SEMICOLON
    (32) FUNCTION_DEFINITION -> . COLON WORD PRINTFUNC SEMICOLON
    (43) FUNCTION_DEFINITION -> . COLON funcword SEMICOLON
    (40) FUNCCALL -> . WORD
    (12) operator -> . PLUS
    (13) operator -> . MINUS
    (14) operator -> . TIMES
    (15) operator -> . DIVIDE
    (16) operator -> . SUP
    (17) operator -> . INF
    (18) operator -> . EQUALS
    (45) CARACTER -> . CR
    (46) CARACTER -> . KEY
    (20) PRINT -> . DOT
    (21) PRINT -> . DOT NUMBER
    (22) PRINT -> . DOT QUOTE words QUOTE
    (23) PRINT -> . EMIT
    (47) CONDICIONAL -> . COLON WORD operator IF part ELSE part THEN SEMICOLON

    NUMBER          shift and go to state 7
    COLON           shift and go to state 12
    WORD            shift and go to state 4
    PLUS            shift and go to state 13
    MINUS           shift and go to state 14
    TIMES           shift and go to state 15
    DIVIDE          shift and go to state 16
    SUP             shift and go to state 17
    INF             shift and go to state 18
    EQUALS          shift and go to state 19
    CR              shift and go to state 20
    KEY             shift and go to state 21
    DOT             shift and go to state 22
    EMIT            shift and go to state 23

    statement                      shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    FUNCTION_DEFINITION            shift and go to state 5
    FUNCCALL                       shift and go to state 6
    operator                       shift and go to state 8
    CARACTER                       shift and go to state 9
    PRINT                          shift and go to state 10
    CONDICIONAL                    shift and go to state 11

state 1

    (0) S' -> statement .



state 2

    (1) statement -> instructions .
    (2) instructions -> instructions . instruction
    (4) instructions -> instructions . instruction WORD
    (5) instructions -> instructions . instruction WORD instruction
    (7) instruction -> instructions . WORD instructions
    (7) instruction -> . instructions WORD instructions
    (9) instruction -> . NUMBER
    (10) instruction -> . operator
    (11) instruction -> . CARACTER
    (19) instruction -> . PRINT
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instructions -> . instructions instruction WORD
    (5) instructions -> . instructions instruction WORD instruction
    (6) instructions -> . FUNCTION_DEFINITION
    (39) instructions -> . FUNCCALL
    (12) operator -> . PLUS
    (13) operator -> . MINUS
    (14) operator -> . TIMES
    (15) operator -> . DIVIDE
    (16) operator -> . SUP
    (17) operator -> . INF
    (18) operator -> . EQUALS
    (45) CARACTER -> . CR
    (46) CARACTER -> . KEY
    (20) PRINT -> . DOT
    (21) PRINT -> . DOT NUMBER
    (22) PRINT -> . DOT QUOTE words QUOTE
    (23) PRINT -> . EMIT
    (8) FUNCTION_DEFINITION -> . CONDICIONAL
    (24) FUNCTION_DEFINITION -> . COLON WORD LPAREN FUNCTION_PARAMS RPAREN FUNCTION_BODY SEMICOLON
    (32) FUNCTION_DEFINITION -> . COLON WORD PRINTFUNC SEMICOLON
    (43) FUNCTION_DEFINITION -> . COLON funcword SEMICOLON
    (40) FUNCCALL -> . WORD
    (47) CONDICIONAL -> . COLON WORD operator IF part ELSE part THEN SEMICOLON

    $end            reduce using rule 1 (statement -> instructions .)
    WORD            shift and go to state 26
    NUMBER          shift and go to state 7
    PLUS            shift and go to state 13
    MINUS           shift and go to state 14
    TIMES           shift and go to state 15
    DIVIDE          shift and go to state 16
    SUP             shift and go to state 17
    INF             shift and go to state 18
    EQUALS          shift and go to state 19
    CR              shift and go to state 20
    KEY             shift and go to state 21
    DOT             shift and go to state 22
    EMIT            shift and go to state 23
    COLON           shift and go to state 12

    instructions                   shift and go to state 24
    instruction                    shift and go to state 25
    operator                       shift and go to state 8
    CARACTER                       shift and go to state 9
    PRINT                          shift and go to state 10
    FUNCTION_DEFINITION            shift and go to state 5
    FUNCCALL                       shift and go to state 6
    CONDICIONAL                    shift and go to state 11

state 3

    (3) instructions -> instruction .

    WORD            reduce using rule 3 (instructions -> instruction .)
    NUMBER          reduce using rule 3 (instructions -> instruction .)
    PLUS            reduce using rule 3 (instructions -> instruction .)
    MINUS           reduce using rule 3 (instructions -> instruction .)
    TIMES           reduce using rule 3 (instructions -> instruction .)
    DIVIDE          reduce using rule 3 (instructions -> instruction .)
    SUP             reduce using rule 3 (instructions -> instruction .)
    INF             reduce using rule 3 (instructions -> instruction .)
    EQUALS          reduce using rule 3 (instructions -> instruction .)
    CR              reduce using rule 3 (instructions -> instruction .)
    KEY             reduce using rule 3 (instructions -> instruction .)
    DOT             reduce using rule 3 (instructions -> instruction .)
    EMIT            reduce using rule 3 (instructions -> instruction .)
    COLON           reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    SEMICOLON       reduce using rule 3 (instructions -> instruction .)


state 4

    (40) FUNCCALL -> WORD .

    WORD            reduce using rule 40 (FUNCCALL -> WORD .)
    NUMBER          reduce using rule 40 (FUNCCALL -> WORD .)
    PLUS            reduce using rule 40 (FUNCCALL -> WORD .)
    MINUS           reduce using rule 40 (FUNCCALL -> WORD .)
    TIMES           reduce using rule 40 (FUNCCALL -> WORD .)
    DIVIDE          reduce using rule 40 (FUNCCALL -> WORD .)
    SUP             reduce using rule 40 (FUNCCALL -> WORD .)
    INF             reduce using rule 40 (FUNCCALL -> WORD .)
    EQUALS          reduce using rule 40 (FUNCCALL -> WORD .)
    CR              reduce using rule 40 (FUNCCALL -> WORD .)
    KEY             reduce using rule 40 (FUNCCALL -> WORD .)
    DOT             reduce using rule 40 (FUNCCALL -> WORD .)
    EMIT            reduce using rule 40 (FUNCCALL -> WORD .)
    COLON           reduce using rule 40 (FUNCCALL -> WORD .)
    $end            reduce using rule 40 (FUNCCALL -> WORD .)
    SEMICOLON       reduce using rule 40 (FUNCCALL -> WORD .)


state 5

    (6) instructions -> FUNCTION_DEFINITION .

    WORD            reduce using rule 6 (instructions -> FUNCTION_DEFINITION .)
    NUMBER          reduce using rule 6 (instructions -> FUNCTION_DEFINITION .)
    PLUS            reduce using rule 6 (instructions -> FUNCTION_DEFINITION .)
    MINUS           reduce using rule 6 (instructions -> FUNCTION_DEFINITION .)
    TIMES           reduce using rule 6 (instructions -> FUNCTION_DEFINITION .)
    DIVIDE          reduce using rule 6 (instructions -> FUNCTION_DEFINITION .)
    SUP             reduce using rule 6 (instructions -> FUNCTION_DEFINITION .)
    INF             reduce using rule 6 (instructions -> FUNCTION_DEFINITION .)
    EQUALS          reduce using rule 6 (instructions -> FUNCTION_DEFINITION .)
    CR              reduce using rule 6 (instructions -> FUNCTION_DEFINITION .)
    KEY             reduce using rule 6 (instructions -> FUNCTION_DEFINITION .)
    DOT             reduce using rule 6 (instructions -> FUNCTION_DEFINITION .)
    EMIT            reduce using rule 6 (instructions -> FUNCTION_DEFINITION .)
    COLON           reduce using rule 6 (instructions -> FUNCTION_DEFINITION .)
    $end            reduce using rule 6 (instructions -> FUNCTION_DEFINITION .)
    SEMICOLON       reduce using rule 6 (instructions -> FUNCTION_DEFINITION .)


state 6

    (39) instructions -> FUNCCALL .

    WORD            reduce using rule 39 (instructions -> FUNCCALL .)
    NUMBER          reduce using rule 39 (instructions -> FUNCCALL .)
    PLUS            reduce using rule 39 (instructions -> FUNCCALL .)
    MINUS           reduce using rule 39 (instructions -> FUNCCALL .)
    TIMES           reduce using rule 39 (instructions -> FUNCCALL .)
    DIVIDE          reduce using rule 39 (instructions -> FUNCCALL .)
    SUP             reduce using rule 39 (instructions -> FUNCCALL .)
    INF             reduce using rule 39 (instructions -> FUNCCALL .)
    EQUALS          reduce using rule 39 (instructions -> FUNCCALL .)
    CR              reduce using rule 39 (instructions -> FUNCCALL .)
    KEY             reduce using rule 39 (instructions -> FUNCCALL .)
    DOT             reduce using rule 39 (instructions -> FUNCCALL .)
    EMIT            reduce using rule 39 (instructions -> FUNCCALL .)
    COLON           reduce using rule 39 (instructions -> FUNCCALL .)
    $end            reduce using rule 39 (instructions -> FUNCCALL .)
    SEMICOLON       reduce using rule 39 (instructions -> FUNCCALL .)


state 7

    (9) instruction -> NUMBER .

    WORD            reduce using rule 9 (instruction -> NUMBER .)
    NUMBER          reduce using rule 9 (instruction -> NUMBER .)
    PLUS            reduce using rule 9 (instruction -> NUMBER .)
    MINUS           reduce using rule 9 (instruction -> NUMBER .)
    TIMES           reduce using rule 9 (instruction -> NUMBER .)
    DIVIDE          reduce using rule 9 (instruction -> NUMBER .)
    SUP             reduce using rule 9 (instruction -> NUMBER .)
    INF             reduce using rule 9 (instruction -> NUMBER .)
    EQUALS          reduce using rule 9 (instruction -> NUMBER .)
    CR              reduce using rule 9 (instruction -> NUMBER .)
    KEY             reduce using rule 9 (instruction -> NUMBER .)
    DOT             reduce using rule 9 (instruction -> NUMBER .)
    EMIT            reduce using rule 9 (instruction -> NUMBER .)
    COLON           reduce using rule 9 (instruction -> NUMBER .)
    $end            reduce using rule 9 (instruction -> NUMBER .)
    SEMICOLON       reduce using rule 9 (instruction -> NUMBER .)


state 8

    (10) instruction -> operator .

    WORD            reduce using rule 10 (instruction -> operator .)
    NUMBER          reduce using rule 10 (instruction -> operator .)
    PLUS            reduce using rule 10 (instruction -> operator .)
    MINUS           reduce using rule 10 (instruction -> operator .)
    TIMES           reduce using rule 10 (instruction -> operator .)
    DIVIDE          reduce using rule 10 (instruction -> operator .)
    SUP             reduce using rule 10 (instruction -> operator .)
    INF             reduce using rule 10 (instruction -> operator .)
    EQUALS          reduce using rule 10 (instruction -> operator .)
    CR              reduce using rule 10 (instruction -> operator .)
    KEY             reduce using rule 10 (instruction -> operator .)
    DOT             reduce using rule 10 (instruction -> operator .)
    EMIT            reduce using rule 10 (instruction -> operator .)
    COLON           reduce using rule 10 (instruction -> operator .)
    $end            reduce using rule 10 (instruction -> operator .)
    SEMICOLON       reduce using rule 10 (instruction -> operator .)


state 9

    (11) instruction -> CARACTER .

    WORD            reduce using rule 11 (instruction -> CARACTER .)
    NUMBER          reduce using rule 11 (instruction -> CARACTER .)
    PLUS            reduce using rule 11 (instruction -> CARACTER .)
    MINUS           reduce using rule 11 (instruction -> CARACTER .)
    TIMES           reduce using rule 11 (instruction -> CARACTER .)
    DIVIDE          reduce using rule 11 (instruction -> CARACTER .)
    SUP             reduce using rule 11 (instruction -> CARACTER .)
    INF             reduce using rule 11 (instruction -> CARACTER .)
    EQUALS          reduce using rule 11 (instruction -> CARACTER .)
    CR              reduce using rule 11 (instruction -> CARACTER .)
    KEY             reduce using rule 11 (instruction -> CARACTER .)
    DOT             reduce using rule 11 (instruction -> CARACTER .)
    EMIT            reduce using rule 11 (instruction -> CARACTER .)
    COLON           reduce using rule 11 (instruction -> CARACTER .)
    $end            reduce using rule 11 (instruction -> CARACTER .)
    SEMICOLON       reduce using rule 11 (instruction -> CARACTER .)


state 10

    (19) instruction -> PRINT .

    WORD            reduce using rule 19 (instruction -> PRINT .)
    NUMBER          reduce using rule 19 (instruction -> PRINT .)
    PLUS            reduce using rule 19 (instruction -> PRINT .)
    MINUS           reduce using rule 19 (instruction -> PRINT .)
    TIMES           reduce using rule 19 (instruction -> PRINT .)
    DIVIDE          reduce using rule 19 (instruction -> PRINT .)
    SUP             reduce using rule 19 (instruction -> PRINT .)
    INF             reduce using rule 19 (instruction -> PRINT .)
    EQUALS          reduce using rule 19 (instruction -> PRINT .)
    CR              reduce using rule 19 (instruction -> PRINT .)
    KEY             reduce using rule 19 (instruction -> PRINT .)
    DOT             reduce using rule 19 (instruction -> PRINT .)
    EMIT            reduce using rule 19 (instruction -> PRINT .)
    COLON           reduce using rule 19 (instruction -> PRINT .)
    $end            reduce using rule 19 (instruction -> PRINT .)
    SEMICOLON       reduce using rule 19 (instruction -> PRINT .)


state 11

    (8) FUNCTION_DEFINITION -> CONDICIONAL .
